# tser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_zh.md
__test/: tsconfig.json  types.d.ts
__test/basic/: 1_data-type.ts  2_operators.ts  3_if-else.ts  4_for.ts  5_while-do.ts  6_switch.ts  7_function.ts
__test/builtin/: console.ts  date.ts
__test/class/: 1_basic.ts  2_static.ts  3_combination.ts  4_extends.ts  combination.ts
src/: config.h.in  loader.cpp  loader.h  main.cpp  tser.cpp  tser.h  utils.h
src/builtin/: CMakeLists.txt  console.cpp  console.h  date.cpp  date.h
src/common/error/: error.cpp  error.h
src/ffi/: intrinsic.cpp  intrinsic.h  link.cpp  link.h
src/grammar/: CMakeLists.txt  TypeScriptLexer.cpp  TypeScriptLexer.g4  TypeScriptLexer.h  TypeScriptLexer.interp  TypeScriptLexer.tokens  TypeScriptParser.cpp  TypeScriptParser.g4  TypeScriptParser.h  TypeScriptParser.interp  TypeScriptParserBaseListener.cpp  TypeScriptParserBaseListener.h  TypeScriptParserBaseVisitor.cpp  TypeScriptParserBaseVisitor.h  TypeScriptParserListener.cpp  TypeScriptParserListener.h  TypeScriptParserVisitor.cpp  TypeScriptParserVisitor.h
src/parsertest/: CMakeLists.txt
src/perf/: pert_utils.cpp  pert_utils.h
src/scope/: scope.cpp  scope.h
src/utils/: fs.cpp  utils.cpp
src/visit/: visit.h  visit_extra.cpp  visit_if.cpp  visit_literal.cpp  visit_program.cpp  visit_return.cpp  visit_switch.cpp  visit_type_sign.cpp  visit_variable_declaration.cpp  visitor.cpp
src/visit/class/: class.cpp  class.h  visit_class.cpp
src/visit/expression/: visit_arguments.cpp  visit_binary_oper.cpp  visit_extra.cpp  visit_identifier.cpp  visit_logical.cpp  visit_member_dot.cpp  visit_new.cpp  visit_ternary.cpp  visit_unary_oper.cpp
src/visit/function/: visit_args.cpp  visit_function_declaration.cpp
src/visit/iteration/: visit_break_continue.cpp  visit_for.cpp  visit_while.cpp
src/visit/reference/: reference.cpp  reference.h
